--- a/azure.html
+++ b/azure.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/x-icon" href="images/1-b.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://kit.fontawesome.com/ce4a303d21.js" crossorigin="anonymous"></script>
@@ -29,9 +29,6 @@
 
           </li>
           <li class="nav-item">
-
-          </li>
-          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="faq.html">FAQ</a>
           </li>
         </ul>
@@ -39,27 +36,29 @@
     </div>
   </nav>
   <div class="container poppins my-5">
-    <h1>Web Development Fundamentals</h1>
+    <h1>Microsoft Certification in AI & Cloud Technologies</h1>
     <h2></h2>
-    <img src="images/Ch-6.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
-    <p style="text-align: justify;">I have acquired a strong foundation in web development, mastering the core principles and technologies that drive modern websites. My training covered essential topics including:</p>
-    <ul style="text-align: justify;margin-bottom:10px;">
-      <li>
-        <strong>Internet Infrastructure: </strong>
-        Learned about the inner workings of the internet and the processes involved in serving websites, from server communication to client-side rendering.
-      </li>
-      <li>
-        <strong>Version Control with Git and GitHub: </strong>
-        Developed proficiency in using Git and GitHub for version control, enabling efficient management and collaboration on coding projects.
-      </li>
-      <li>
-        <strong>Troubleshooting and Debugging: </strong>
-        Acquired key skills in identifying and resolving issues within web projects, enhancing my ability to maintain and improve web applications.
-      </li>
+    <img src="images/azure_cert.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <p style="text-align: justify;">I achieved certification from Microsoft, deepening my expertise in artificial intelligence and cloud technologies. This rigorous training covered a broad spectrum of advanced topics, including:</p>
+      <ul style="text-align: justify;margin-bottom:10px;">
+        <li>
+          <strong>Azure AI Overview: </strong>
+          Gained a comprehensive understanding of Microsoft's Azure AI services, including their integration and application in real-world scenarios.
+        </li>
+        <li>
+          <strong>Natural Language Processing (NLP): </strong>
+          Mastered techniques for processing and analyzing human language data, enhancing the ability to build intelligent language-based applications.
+        </li>
+        <li>
+          <strong>Intelligence and Knowledge Mining: </strong>
+          Learned how to extract actionable insights from large datasets, leveraging AI to uncover hidden patterns and knowledge.
+        </li>
+        <li>
+          <strong>Generative AI:  </strong>
+          Explored cutting-edge approaches in generating new content and solutions using advanced AI techniques.
+        </li>
       </ul>
-    <p style="text-align: justify;"> As a practical application of these skills, I developed a School Website designed to address the needs of students, teachers, and administrators. This project involved creating an intuitive user interface, implementing essential features, and ensuring a seamless user experience. I had the opportunity to present this website to the school principal, demonstrating its potential to streamline communication and improve school operations.</p>
-    <p style="margin-bottom: 203px;text-align: justify;">This comprehensive training and project experience have equipped me with the expertise to build effective and engaging websites while applying best practices in web development.</p>
-  <!-- <div class="circular-progress"></div> -->
+      <p style="margin-bottom: 203px;text-align: justify;"> This certification not only solidified my knowledge in these key areas but also equipped me with practical skills to implement AI solutions effectively within cloud environments. It underscores my commitment to staying at the forefront of technology and my ability to contribute to innovative projects in the AI and machine learning domains.</p>
     <!-- <div class="circular-progress"></div> -->
   </div>
   <div class="back-footer bg-dark">
