--- a/flutter.html
+++ b/flutter.html
@@ -36,19 +36,12 @@
     </div>
   </nav>
   <div class="container poppins my-5">
-    <h1>Flutter</h1>
-    <h2>Page Loading...</h2>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToHEhkTw7tnGlR1taYOH87wXsUEWtd-FNJFw&s" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem; width: 25rem;">
-    <p style="margin-bottom: 203px;text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. loremLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus. Proin a velit vitae sem vehicula efficitur vitae ut metus. Nulla facilisi. Cras pellentesque dui non scelerisque rhoncus. Etiam laoreet tempor nunc. Quisque id condimentum odio, eget tristique ex. Quisque sodales interdum sapien ac viverra. Etiam eget elit quam. Maecenas nisi metus, efficitur sit amet hendrerit ac, convallis sed velit. sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h1>Flutter & Dart Development</h1>
+    <h2></h2>
+    <img src="images/ch-5.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <p style="text-align: justify;">As part of my programming journey, I delved into mobile app development using Flutter and Dart. Flutter, a powerful framework for building natively compiled applications for iOS and Android from a single codebase, allowed me to develop sophisticated and high-performance mobile applications.</p>
+    <p style="text-align: justify;">One of my key projects was the development of a School App, designed to streamline communication and manage various aspects of school operations. This project involved crafting a user-friendly interface and implementing features tailored to the needs of students, teachers, and administrators. I had the opportunity to demonstrate this app to the school principal, showcasing its potential to enhance the school's efficiency and user experience.</p>
+    <p style="margin-bottom: 203px;text-align: justify;">This experience with Flutter and Dart not only expanded my technical skills but also provided me with valuable insights into real-world application development and stakeholder engagement.</p>
     <!-- <div class="circular-progress"></div> -->
   </div>
   <div class="back-footer bg-dark">
