--- a/gd.html
+++ b/gd.html
@@ -29,7 +29,7 @@
 
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="ach.html">Achivements</a>
+
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="faq.html">FAQ</a>
@@ -39,19 +39,30 @@
     </div>
   </nav>
   <div class="container poppins my-5">
-    <h1>Godot</h1>
-    <h2>Page Loading...</h2>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToHEhkTw7tnGlR1taYOH87wXsUEWtd-FNJFw&s" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem; width: 25rem;">
-    <p style="margin-bottom: 203px;text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. loremLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus. Proin a velit vitae sem vehicula efficitur vitae ut metus. Nulla facilisi. Cras pellentesque dui non scelerisque rhoncus. Etiam laoreet tempor nunc. Quisque id condimentum odio, eget tristique ex. Quisque sodales interdum sapien ac viverra. Etiam eget elit quam. Maecenas nisi metus, efficitur sit amet hendrerit ac, convallis sed velit. sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h1>Game Development Experience with Roblox</h1>
+    <h2></h2>
+    <img src="images/roblox.png" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <p style="text-align: justify;">Roblox offers a unique approach to game development with its Lua scripting language and a platform that allows immediate sharing and community feedback. This combination of scripting, creative design, and social engagement has been instrumental in my growth as a game developer.</p>
+    <p style="text-align: justify;">Key Skills Acquired:</p>
+    <li>
+      <strong>Lua Scripting: </strong>
+      Mastered Lua to create game mechanics, player interactions, and dynamic in-game events.
+    </li>
+    <li>
+      <strong>Roblox Studio Proficiency: </strong>
+      Gained expertise in Roblox Studio’s tools, including terrain design, object manipulation, and collaborative features.
+    </li>
+    <li>
+      <strong>Multiplayer Game Design: </strong>
+      Designed and developed multiplayer games that encourage social interaction and competitive play.
+    </li>
+    <li>
+      <strong>Monetization Strategies: </strong>
+      Implemented in-game monetization techniques like in-game purchases and microtransactions to enhance user engagement and game revenue.
+    </li>
+    <p style="text-align: justify;">My Approach to Game Development</p>
+    <p style="text-align: justify;">My approach to game development is both creative and technical, blending programming skills with design thinking.</p>
+    <p style="margin-bottom: 203px;text-align: justify;"></p>
     <!-- <div class="circular-progress"></div> -->
   </div>
   <div class="back-footer bg-dark">
