--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#about-me">About</a>
+            <a class="nav-link active" aria-current="page" href="#about-me">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#skills">My Skills</a>
@@ -76,7 +76,7 @@
           <div class="container">
             <!-- <h1>More About me</h1> -->
             <h4>My Programming and Development Journey</h4>
-            <p>Hello! I'm GM. Pawan, a passionate student currently in the 12th standard, and an aspiring software developer. I have embarked on a journey to master various programming languages and technologies. My learning experience spans from foundational skills to advanced AI and game development, reflecting my commitment to becoming a versatile and skilled programmer. Below is an overview of my expertise.</p>
+            <p>Hello! I'm GM. Pawan, a passionate student currently in the 6th standard, and an aspiring software developer. I have embarked on a journey to master various programming languages and technologies. My learning experience spans from foundational skills to advanced AI and game development, reflecting my commitment to becoming a versatile and skilled programmer. Below is an overview of my expertise.</p>
             <h4>Scratch Programming</h4>
             <p>My programming journey began with Scratch, a visual programming language that introduced me to the basics of coding and logical thinking. Through creating interactive stories and games, I developed a strong foundation in coding principles.</p>
             <h4>Python Programming</h4>
@@ -162,29 +162,47 @@
     <div class="row g-4 py-5 row-cols-3 justify-content-around">
       <a href="scratch.html" class="nice-card">
         <img src="images/scratch.png" class="img-fluid max-height" alt="...">
-        <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="normal">I began my coding journey with Scratch, earning a certification for my ability to create interactive stories, games, and animations.This foundational experience not only honed my problem-solving skills but also ignited my passion for programming...</p>
       </a>
       <a href="python.html" class="nice-card">
         <img src="images/python.png" class="img-fluid max-height" alt="...">
-        <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="normal">My programming journey evolved from Scratch to Python, where I pursued a comprehensive understanding of the language—from basics to advanced concepts. Through hands-on projects and practical applications, I developed a solid proficiency in Python...</p>
       </a>
       <a href="flutter.html" class="nice-card">
         <img src="images/flutter.png" class="img-fluid max-height" alt="...">
-        <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est .</p>
+        <p class="normal">As part of my programming journey, I delved into mobile app development using Flutter and Dart. Flutter, a powerful framework for building natively compiled applications for iOS and Android from a single codebase, allowed me to develop sophisticated and high-performance mobile applications...</p>
+      </a>
+    </div>
+    <div class="row g-4 py-5 row-cols-3 justify-content-around">
+      <a href="tf.html" class="nice-card">
+        <div class="flex">
+          <img src="images/tf.png" class="img-fluid max-height" alt="...">
+        </div>
+        <p class="normal">I further advanced my technical skills by completing the TensorFlow by Google certification, focusing on artificial intelligence, machine learning, and deep learning. This comprehensive training equipped me with a deep understanding of TensorFlow, one of the most powerful tools for building and deploying machine learning models...</p>
+      </a>
+      <a href="azure.html" class="nice-card">
+        <div class="flex">
+          <img src="images/azure.png" class="img-fluid max-height" alt="...">
+        </div>
+        <p class="normal">I achieved certification from Microsoft, deepening my expertise in artificial intelligence and cloud technologies. This rigorous training covered a broad spectrum of advanced topics, including:..</p>
+      </a>
+      <a href="html.html" class="nice-card">
+        <div class="flex">
+          <img src="images/html.png" class="img-fluid max-height" alt="...">
+        </div>
+        <p class="normal">I have acquired a strong foundation in web development, mastering the core principles and technologies that drive modern websites. My training covered essential topics including:..</p>
       </a>
     </div>
     <div class="row g-4 py-5 row-cols-3 justify-content-around">
       <a href="unity.html" class="nice-card">
         <img src="images/unity.png" class="img-fluid max-height" alt="...">
-        <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="normal">After learning several programming languages, I discovered a passion for game development, which led me to explore popular platforms like Unity and Roblox. Over time, I have honed my skills and developed multiple games on both platforms, each with unique challenges and learning experiences...</p>
       </a>
       <a href="gd.html" class="nice-card">
-        <img src="images/gd.png" class="img-fluid max-height" alt="...">
-        <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </a>
-      <a href="html.html" class="nice-card">
-        <img src="images/html.png" class="img-fluid max-height" alt="...">
-        <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.</p>
+        <div class="flex">
+          <img src="images/roblox-logo.png" class="img-fluid max-height" alt="...">
+        </div>
+        <p class="normal">Roblox offers a unique approach to game development with its Lua scripting language and a platform that allows immediate sharing and community feedback. This combination of scripting, creative design, and social engagement has been instrumental in my growth as a game developer...</p>
       </a>
     </div>
   </div>
