--- a/scratch.html
+++ b/scratch.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarsExample07">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="ach.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
 
@@ -36,20 +36,30 @@
     </div>
   </nav>
   <div class="container poppins my-5">
-    <h1>Scratch</h1>
-    <h2>Page Loading...</h2>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToHEhkTw7tnGlR1taYOH87wXsUEWtd-FNJFw&s" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem; width: 25rem;">
-    <p style="margin-bottom: 203px;text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. loremLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus. Proin a velit vitae sem vehicula efficitur vitae ut metus. Nulla facilisi. Cras pellentesque dui non scelerisque rhoncus. Etiam laoreet tempor nunc. Quisque id condimentum odio, eget tristique ex. Quisque sodales interdum sapien ac viverra. Etiam eget elit quam. Maecenas nisi metus, efficitur sit amet hendrerit ac, convallis sed velit. sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h1>Scratch Programming Achievement</h1>
+    <img src="images/Ch-4.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <p style="text-align: justify;">I began my coding journey with Scratch, earning a certification for my ability to create interactive stories, games, and animations. This foundational experience not only honed my problem-solving skills but also ignited my passion for programming. Building on the skills gained from Scratch, I have since explored and mastered additional programming languages and technologies, further advancing my expertise.</p>
     <!-- <div class="circular-progress"></div> -->
+    <p style="text-align: justify;">Key Features</p>
+    <ul style="text-align: justify;">,
+      <li>
+        <strong>Block-Based Coding: </strong>
+        Scratch eliminates the need for typing syntax, making it easier for users to understand programming logic by connecting color-coded blocks.
+      </li>
+      <li>
+        <strong>Interactive Projects: </strong>
+        Users can create multimedia projects with sprites (characters) and backgrounds, allowing for creativity in storytelling and game design.
+      </li>
+      <li>
+        <strong>Community and Sharing: </strong>
+        Scratch has an active online community where users can share their projects, remix others' creations, and collaborate on new ideas.
+      </li>
+      <li>
+        <strong>Educational Value: </strong>
+        Scratch helps develop critical thinking, problem-solving skills, and an understanding of basic programming concepts such as loops, conditionals, and variables.
+      </li>
+    </ul>
+    <p style="margin-bottom: 180px;text-align: justify;">Whether you're a beginner looking to explore the basics of coding or an educator aiming to introduce programming in a fun way, Scratch is a versatile platform to start your programming journey.</p>
   </div>
   <div class="back-footer bg-dark">
     <div class="container">
