--- a/tf.html
+++ b/tf.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/x-icon" href="images/1-b.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://kit.fontawesome.com/ce4a303d21.js" crossorigin="anonymous"></script>
@@ -29,9 +29,6 @@
 
           </li>
           <li class="nav-item">
-
-          </li>
-          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="faq.html">FAQ</a>
           </li>
         </ul>
@@ -39,27 +36,12 @@
     </div>
   </nav>
   <div class="container poppins my-5">
-    <h1>Web Development Fundamentals</h1>
+    <h1>TensorFlow & Advanced AI Expertise</h1>
     <h2></h2>
-    <img src="images/Ch-6.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
-    <p style="text-align: justify;">I have acquired a strong foundation in web development, mastering the core principles and technologies that drive modern websites. My training covered essential topics including:</p>
-    <ul style="text-align: justify;margin-bottom:10px;">
-      <li>
-        <strong>Internet Infrastructure: </strong>
-        Learned about the inner workings of the internet and the processes involved in serving websites, from server communication to client-side rendering.
-      </li>
-      <li>
-        <strong>Version Control with Git and GitHub: </strong>
-        Developed proficiency in using Git and GitHub for version control, enabling efficient management and collaboration on coding projects.
-      </li>
-      <li>
-        <strong>Troubleshooting and Debugging: </strong>
-        Acquired key skills in identifying and resolving issues within web projects, enhancing my ability to maintain and improve web applications.
-      </li>
-      </ul>
-    <p style="text-align: justify;"> As a practical application of these skills, I developed a School Website designed to address the needs of students, teachers, and administrators. This project involved creating an intuitive user interface, implementing essential features, and ensuring a seamless user experience. I had the opportunity to present this website to the school principal, demonstrating its potential to streamline communication and improve school operations.</p>
-    <p style="margin-bottom: 203px;text-align: justify;">This comprehensive training and project experience have equipped me with the expertise to build effective and engaging websites while applying best practices in web development.</p>
-  <!-- <div class="circular-progress"></div> -->
+    <img src="images/Ch-2.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <p style="text-align: justify;">I further advanced my technical skills by completing the TensorFlow by Google certification, focusing on artificial intelligence, machine learning, and deep learning. This comprehensive training equipped me with a deep understanding of TensorFlow, one of the most powerful tools for building and deploying machine learning models.</p>
+    <p style="text-align: justify;">Through this certification, I gained expertise in designing, training, and evaluating complex neural networks, as well as implementing state-of-the-art algorithms to solve real-world problems. My training covered a wide range of topics, including deep learning architectures, model optimization, and deployment strategies, all crucial for developing cutting-edge AI solutions.</p>
+    <p style="margin-bottom: 203px;text-align: justify;">Achieving this certification not only validated my skills in AI and machine learning but also enhanced my capability to tackle sophisticated projects and contribute effectively to the field of artificial intelligence.</p>
     <!-- <div class="circular-progress"></div> -->
   </div>
   <div class="back-footer bg-dark">
