--- a/unity.html
+++ b/unity.html
@@ -36,19 +36,30 @@
     </div>
   </nav>
   <div class="container poppins my-5">
-    <h1>Unity</h1>
-    <h2>Page Loading...</h2>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToHEhkTw7tnGlR1taYOH87wXsUEWtd-FNJFw&s" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem; width: 25rem;">
-    <p style="margin-bottom: 203px;text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. loremLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.Integer porta pulvinar interdum. Maecenas non metus felis. Ut a congue arcu. Aenean egestas massa in augue blandit lacinia. Nunc tempus sem ac scelerisque blandit. In accumsan risus vulputate urna viverra rhoncus. Nam venenatis accumsan vehicula. Mauris facilisis lacinia mollis. Vivamus tempor sapien ut lobortis scelerisque.
-
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus.
-Duis sodales, erat id pretium maximus, nunc magna porttitor sapien, et tempor odio felis a lacus. Proin a velit vitae sem vehicula efficitur vitae ut metus. Nulla facilisi. Cras pellentesque dui non scelerisque rhoncus. Etiam laoreet tempor nunc. Quisque id condimentum odio, eget tristique ex. Quisque sodales interdum sapien ac viverra. Etiam eget elit quam. Maecenas nisi metus, efficitur sit amet hendrerit ac, convallis sed velit. sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h1>Game Development Experience with Unity</h1>
+    <h2></h2>
+    <img src="images/Ch-7.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <p style="text-align: justify;">After learning several programming languages, I discovered a passion for game development, which led me to explore popular platforms like Unity and Roblox. Over time, I have honed my skills and developed multiple games on both platforms, each with unique challenges and learning experiences. Below is a glimpse of my journey and accomplishments in game development.</p>
+    <p style="text-align: justify;">Unity Game Development</p>
+    <p style="text-align: justify;">Unity has been one of my primary platforms for game development, known for its powerful engine, extensive asset store, and flexibility. I leveraged Unity's capabilities to bring my game ideas to life, focusing on gameplay mechanics, 3D modeling, and immersive environments.</p>
+    <p style="text-align: justify;">Key Skills Acquired:</p>
+    <li>
+      <strong>C# Scripting: </strong>
+      Gained proficiency in C# for scripting game logic, managing player controls, and developing interactive gameplay elements.
+    </li>
+    <li>
+      <strong>3D Game Design: </strong>
+      Developed skills in creating 3D worlds using Unity’s tools and integrating models, animations, and textures to build engaging environments.
+    </li>
+    <li>
+      <strong>Physics and AI: </strong>
+      : Implemented game physics and basic AI for NPCs (Non-Player Characters) to enhance game realism and challenge.
+    </li>
+    <li>
+      <strong>UI/UX Design: </strong>
+      Designed user interfaces that improve player experience, including menus, HUDs (Heads-Up Displays), and interactive elements.
+    </li>
+    <p style="margin-bottom: 203px;text-align: justify;"></p>
     <!-- <div class="circular-progress"></div> -->
   </div>
   <div class="back-footer bg-dark">
